force-app/main/default/objects/NumberToTextConfiguration__mdt/NumberToTextConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Number values and configurations used for Number to Text translation.</description>
    <label>Number to text configuration</label>
    <pluralLabel>Number to text configurations</pluralLabel>
</CustomObject>