force-app/main/default/objects/NumberToTextConfiguration__mdt/fields/NumberValue__c.field-meta.xml
<CustomField>
    <fullName>NumberValue__c</fullName>
    <label>Number value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>