force-app/main/default/objects/NumberToTextConfiguration__mdt/fields/OptionalValue__c.field-meta.xml
<CustomField>
    <fullName>OptionalValue__c</fullName>
    <label>Optional value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>