force-app/main/default/objects/NumberToTextConfiguration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>NumberValue__c</columns>
    <columns>OptionalValue__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>