force-app/main/default/objects/NumberToTextConfiguration__mdt/listViews/Spanish.listView-meta.xml
<ListView>
    <fullName>Spanish</fullName>
    <columns>MasterLabel</columns>
    <columns>NumberValue__c</columns>
    <columns>OptionalValue__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>Spanish</value>
    </filters>
    <label>Spanish</label>
</ListView>